[package]
name = "app-json-settings"
version = "1.0.0"
edition = "2021"

description = "App settings as JSON format stored in file and available via read-by-key and write-by-key. Aims a tiny settings manager with reasonably few dependencies."
authors = ["nabbisen"]
license-file = "./LICENSE"

categories = ["config"]
keywords = ["json", "serde", "utility", "file"]
rust-version = "1.78.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
